k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciyex-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ciyex-api.apps-dev.in.hinisoft.com
      secretName: ciyex-ingress-dev-tls
  rules:
    - host: ciyex-api.apps-dev.in.hinisoft.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-ciyex-app
                port:
                  number: 8080
